auto published by sy-post-publisher

--- a/docs/02.docker/01.快速使用/02.docker启动php环境.md
+++ b/docs/02.docker/01.快速使用/02.docker启动php环境.md
@@ -10,6 +10,7 @@ meta:
 tags: []
 categories:
   - 02.docker
+  - 01.快速使用
 author:
   name: terwer
   link: https://github.com/leef-l
@@ -17,7 +18,15 @@ author:
 
 # 02.docker启动php环境
 
-2131312
+测试
+
+11111111111
+
+‍
+
+‍
+
+​![docker-01.安装.001](assets/docker-01.安装.001-20230525075408-1xml8gl.png)​
 
 
 
